--- a/notebooks/EDA_NVDA_Analysis.ipynb
+++ b/notebooks/EDA_NVDA_Analysis.ipynb
@@ -440,6 +440,45 @@
     "#check code quality\n",
     "text_analyser.check_data_quality()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Headline Length Statistics:\n",
+      "count    1.407328e+06\n",
+      "mean     7.312051e+01\n",
+      "std      4.073531e+01\n",
+      "min      3.000000e+00\n",
+      "25%      4.700000e+01\n",
+      "50%      6.400000e+01\n",
+      "75%      8.700000e+01\n",
+      "max      5.120000e+02\n",
+      "Name: headline_length, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# headline length statistics\n",
+    "summery=text_analyser.headline_length_stats()\n",
+    "print(summery)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count the number of articles per publisher to identify which publishers are most active.\n",
+    "articles_per_publisher=text_analyser.article_per_publisher()\n",
+    "articles_per_publisher"
+   ]
   }
  ],
  "metadata": {
